# crypto-mpc

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCKER_FIX_SUMMARY.md  DOCKER_QUICKREF.md  DOCKER_SETUP.md  DOCKER_USAGE.md  Dockerfile  LICENSE  MPC_MULTIPLICATION_QUICK_REFERENCE.md  README.md  SECURITY.md  WEEK5_IMPLEMENTATION_SUMMARY.md  docker-compose.override.yml.example  docker-compose.yml  test_sodium  test_sodium.c  test_verify.c
.github/workflows/: ci.yml
examples/: private_voting.c  salary_average.c  sealed_auction.c
include/sss/: field.h  mpc.h  polynomial.h  secret_sharing.h
include/utils/: secure_memory.h
scripts/: build.sh  docker-build.sh  docker-test.sh  test.sh
src/core/: field_arithmetic.c  mpc.c  polynomial.c  secret_sharing.c
src/utils/: error.c  error.h  random.c  random.h  secure_memory.c
tests/: comprehensive_test.c  mpc_arithmetic_test.c  mpc_demo.c  mpc_foundation_test.c  mpc_highlevel_test.c  mpc_multiplication_test.c  secure_memory_test.c  simple_test.c
